force-app/main/default/objects/Student__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated college</description>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>