force-app/main/default/objects/Student__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>