force-app/main/default/objects/Student__c/fields/Is_International__c.field-meta.xml
<CustomField>
    <fullName>Is_International__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for international students</description>
    <label>Is International</label>
    <type>Checkbox</type>
</CustomField>