force-app/main/default/objects/Student__c/fields/Preferred_Course__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Course__c</fullName>
    <label>Preferred Course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>AIML</fullName>
            </value>
            <value>
                <fullName>ISE</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>