force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Unique student ID (e.g., STU-0001)</description>
    <displayFormat>STID-{000}</displayFormat>
    <label>Student ID</label>
    <type>AutoNumber</type>
</CustomField>