force-app/main/default/objects/Student__c/fields/Tuition_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Fee__c</fullName>
    <label>Tuition Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>